--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,17 +32,17 @@ dependencies = [
     "seaborn",
     "joblib",
     "scikit-learn~=1.3.0",
-    "lightglue @ git+https://github.com/cvg/LightGlue.git",
+    "lightglue @ git+https://ghfast.top/https://github.com/cvg/LightGlue.git",
 ]
-urls = {Repository = "https://github.com/cvg/glue-factory"}
+urls = {Repository = "https://ghfast.top/https://github.com/cvg/glue-factory"}
 
 [project.optional-dependencies]
 extra = [
     "pycolmap",
     "poselib",
-    "pytlsd @ git+https://github.com/iago-suarez/pytlsd.git@4180ab8990ae68cc9c8797c63aa1dc47b2c714da",
-    "deeplsd @ git+https://github.com/cvg/DeepLSD.git",
-    "homography_est @ git+https://github.com/rpautrat/homography_est.git@17b200d528e6aa8ac61a878a29265bf5f9d36c41",
+    "pytlsd @ git+https://ghfast.top/https://github.com/iago-suarez/pytlsd.git@4180ab8990ae68cc9c8797c63aa1dc47b2c714da",
+    "deeplsd @ git+https://ghfast.top/https://github.com/cvg/DeepLSD.git",
+    "homography_est @ git+https://ghfast.top/https://github.com/rpautrat/homography_est.git@17b200d528e6aa8ac61a878a29265bf5f9d36c41",
 ]
 dev = ["black", "flake8", "isort", "parameterized"]
 
