feat(config): 更新配置文件中的匹配器名称
- 将 superpoint+lightglue_megadepth_v1 中的匹配器从
  'matchers.lightglue_tssa+efficient' 更改为 'matchers.lightglue_tssa'
- 新增 superpoint+lightglue_megadepth_v2 配置文件，使用
  'matchers.lightglue_tssa+efficient' 匹配器
- 新增 superpoint+lightglue_megadepth_v3 配置文件，使用
  'matchers.lightglue_moha' 匹配器
- 新增 superpoint+lightglue_megadepth_v4 配置文件，使用
  'matchers.lightglue_starReLU' 匹配器
- 新增 superpoint+lightglue_megadepth_v5 配置文件，使用
  'matchers.lightglue_tssa_starReLU' 匹配器

--- a/gluefactory/configs/superpoint+lightglue_megadepth_v2.yaml
+++ b/gluefactory/configs/superpoint+lightglue_megadepth_v2.yaml
@@ -30,7 +30,7 @@ model:
         nms_radius: 3
         trainable: False
     matcher:
-        name: matchers.lightglue_tssa
+        name: matchers.lightglue_tssa+efficient
         filter_threshold: 0.1
         flash: false
         checkpointed: true
